title the inputs too

--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -29,6 +29,7 @@
 <div id="build-body">
   <div id="build-resources">
     <div class="build-inputs">
+      <h2>inputs</h2>
       {{range .Inputs}}
       <div class="build-source{{if .FirstOccurrence}} first-occurrence{{end}}">
         <div class="resource-header">
