autoscale graph to fit window; add zoom/pan

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,7 +7,7 @@
   {{end}}
 </ul>
 
-<svg><g transform="translate(20,20)"/></svg>
+<svg><g/></svg>
 
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
 <script src="{{url "Public" "d3.v3.min.js"}}"></script>
