statically set svg to 100% width/height
[#76275492]

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,7 +7,7 @@
   {{end}}
 </ul>
 
-<svg><g/></svg>
+<svg width="100%" height="100%"><g/></svg>
 
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
 <script src="{{url "Public" "d3.v3.min.js"}}"></script>
