--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,7 +7,13 @@
   {{end}}
 </ul>
 
-<svg id="pipeline" width="100%" height="100%"><g/></svg>
+<svg id="pipeline" width="100%" height="100%">
+  <g>
+    <defs>
+      <g id="gateway"><rect y="-15" width="2" height="30" class="gateway" /></g>
+    </defs>
+  </g>
+</svg>
 
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
 <script src="{{url "Public" "d3.v3.min.js"}}"></script>
