initial handling of turbine's new event stream
[#73309626]

--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -95,6 +95,7 @@
 </div>
 
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
+<script src="{{url "Public" "ansiparse.js"}}"></script>
 <script src="{{url "Public" "build.js"}}"></script>
 <script type="text/javascript">
 var protocol;
