--- a/server/public/main.css
+++ b/server/public/main.css
@@ -14,6 +14,11 @@ pre {
   padding: 1em;
 }
 
+#build-log .error {
+    color: #d36764;
+    font-weight: bold;
+}
+
 #autoscroll-toggle {
   position: fixed;
   top: 1em;
