--- a/server/templates/build.html
+++ b/server/templates/build.html
@@ -27,25 +27,25 @@
 </div>
 
 <div id="build-body">
-  <div id="build-resources">
-    {{if not (eq 0 (len .Inputs))}}
-    <div class="build-inputs">
-      <h2>inputs</h2>
-      {{range .Inputs}}
-      <div class="build-source{{if .FirstOccurrence}} first-occurrence{{end}}">
-        <div class="resource-header">
-          <h3>{{.Name}}</h3>
+  {{if not (eq 0 (len .Inputs))}}
+  <div class="build-resources build-inputs">
+    <h2>inputs</h2>
+    {{range .Inputs}}
+    <div data-resource="{{.Name}}" class="build-source{{if .FirstOccurrence}} first-occurrence{{end}}">
+      <div class="resource-header">
+        <h3>{{.Name}}</h3>
 
-          <dl class="version">
-            {{range $name, $val := .Version}}
-            <dt>{{$name}}</dt>
-              <dd>{{$val}}</dd>
-            {{end}}
-          </dl>
+        <dl class="version">
+          {{range $name, $val := .Version}}
+          <dt>{{$name}}</dt>
+            <dd>{{$val}}</dd>
+          {{end}}
+        </dl>
 
-          <div style="clear: both"></div>
-        </div>
+        <div style="clear: both"></div>
+      </div>
 
+      <div class="resource-body">
         {{if not (eq 0 (len .Metadata))}}
         <dl class="build-metadata">
           {{range .Metadata}}
@@ -54,44 +54,53 @@
           {{end}}
         </dl>
         {{end}}
+
+        <pre class="log"></pre>
       </div>
-      {{end}}
-    </div>
-    {{end}}
-
-    {{if not (eq 0 (len .Outputs))}}
-    <div class="build-outputs">
-      <h2>outputs</h2>
-      {{range .Outputs}}
-      <div class="build-source">
-        <div class="resource-header">
-          <h3>{{.Name}}</h3>
-
-          <dl class="version">
-            {{range $name, $val := .Version}}
-            <dt>{{$name}}</dt>
-              <dd>{{$val}}</dd>
-            {{end}}
-          </dl>
-
-          <div style="clear: both"></div>
-        </div>
-
-        {{if not (eq 0 (len .Metadata))}}
-        <dl class="build-metadata">
-          {{range .Metadata}}
-          <dt>{{.Name}}</dt>
-            <dd>{{.Value}}</dd>
-          {{end}}
-        </dl>
-        {{end}}
-      </div>
-      {{end}}
     </div>
     {{end}}
   </div>
+  {{end}}
 
-  <pre id="build-log"></pre>
+  <div class="build-run">
+    <h2>build</h2>
+    <pre id="build-log"></pre>
+  </div>
+
+  {{if not (eq 0 (len .Outputs))}}
+  <div class="build-resources build-outputs">
+    <h2>outputs</h2>
+    {{range .Outputs}}
+    <div data-resource="{{.Name}}" class="build-source">
+      <div class="resource-header">
+        <h3>{{.Name}}</h3>
+
+        <dl class="version">
+          {{range $name, $val := .Version}}
+          <dt>{{$name}}</dt>
+            <dd>{{$val}}</dd>
+          {{end}}
+        </dl>
+
+        <div style="clear: both"></div>
+      </div>
+
+      <div class="resource-body">
+        {{if not (eq 0 (len .Metadata))}}
+        <dl class="build-metadata">
+          {{range .Metadata}}
+          <dt>{{.Name}}</dt>
+            <dd>{{.Value}}</dd>
+          {{end}}
+        </dl>
+        {{end}}
+
+        <pre class="log"></pre>
+      </div>
+    </div>
+    {{end}}
+  </div>
+  {{end}}
 </div>
 
 <script src="{{url "Public" "jquery-2.1.1.min.js"}}"></script>
