extract colors into separate stylesheet

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -3,6 +3,7 @@
   <head>
     <title>{{template "title" .}}</title>
     <link href="{{url "Public" "main.css"}}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{{url "Public" "colors.css"}}" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
     {{template "body" .}}
