switch to base16 colors, spruce up build view
arthur will live on in my heart.

--- a/server/public/colors.css
+++ b/server/public/colors.css
@@ -1,133 +1,123 @@
 /* background */
-body { background: #222; }
+body { background: #202020; }
 
 /* foreground */
-body { color: #dfeee0; }
+body { color: #d0d0d0; }
 
 /* regular links */
-a { color: #6a9eef; }
+a { color: #6a9fb5; } /* not really used anywhere... */
 
 /* emphasis */
-#build-title h1 { color: #fff; }
-#resource-header h1 { color: #fff; }
-svg .edgeLabel text { fill: #fff; }
-svg h1 a { color: #fff; }
-#build-title .abort-build input:hover { color: #fff; }
-#build-title .abort-build input:active { color: #fff; }
-#version-history .builds li a { color: #fff; }
-#builds li a { color: #fff; }
+#build-title h1 { color: #f5f5f5; }
+#resource-header h1 { color: #f5f5f5; }
+svg .edgeLabel text { fill: #f5f5f5; }
+svg h1 a { color: #f5f5f5; }
+#build-title .abort-build input:hover { color: #f5f5f5; }
+#build-title .abort-build input:active { color: #f5f5f5; }
+#version-history .builds li a { color: #f5f5f5; }
+#builds li a { color: #f5f5f5; }
 
 /* dark */
-svg .node rect { fill: #111; }
-#builds { background: #111; }
-#version-history .builds { background: #111; }
-.build-resources .resource-header { background: #111; }
+svg .node rect { fill: #151515; }
+#builds { background: #151515; }
+#version-history .builds { background: #151515; }
+.build-resources .resource-header { background: #151515; }
 
 /* highlight background */
-svg .edgePath path { stroke: #333; }
-svg .gateway { fill: #333; }
-.build-source.first-occurrence .resource-header { background: #333; }
+svg .edgePath path { stroke: #303030; }
+svg .gateway { fill: #303030; }
+.build-resources { background: #303030; }
+
+/* even more highlight background */
+.build-source.first-occurrence .resource-header { background: #505050; }
 
 /* highlight foreground */
-.resource-header .version { color: #c0afa0; }
+.resource-header .version { color: #e0e0e0; }
 
 /* dim */
-svg .edgePath.pending path { stroke: #5d4c4c; }
-svg #arrowhead-pending path { fill: #5d4c4c; }
-svg .node.job.pending rect { fill: #5d4c4c; }
-#build-title.pending { background: #5d4c4c; }
-li.pending { background: #5d4c4c; }
+svg .edgePath.pending path { stroke: #505050; }
+svg #arrowhead-pending path { fill: #505050; }
+svg .node.job.pending rect { fill: #505050; }
+#build-title.pending { background: #505050; }
+li.pending { background: #505050; }
 
-/* green */
-svg .edgePath.succeeded path { stroke: #8cb287; }
-svg #arrowhead-succeeded path { fill: #8cb287; }
-svg .node.job.succeeded rect { fill: #8cb287; }
-#build-title.succeeded { background: #8cb287; }
-li.succeeded { background: #8cb287; }
+/* good */
+svg .edgePath.succeeded path { stroke: #90a959; }
+svg #arrowhead-succeeded path { fill: #90a959; }
+svg .node.job.succeeded rect { fill: #90a959; }
+#build-title.succeeded { background: #90a959; }
+li.succeeded { background: #90a959; }
 
-/* red */
-svg .edgePath.failed path { stroke: #d36764; }
-svg #arrowhead-failed path { fill: #d36764; }
-svg .node.job.failed rect { fill: #d36764; }
-#build-title.failed { background: #d36764; }
-li.failed { background: #d36764; }
-#build-title .abort-build input { color: #d36764; }
-#build-title .abort-build input:hover { background: #d36764; }
-#build-log .error { color: #d36764; }
+/* bad */
+svg .edgePath.failed path { stroke: #ac4142; }
+svg #arrowhead-failed path { fill: #ac4142; }
+svg .node.job.failed rect { fill: #ac4142; }
+#build-title.failed { background: #ac4142; }
+li.failed { background: #ac4142; }
+#build-title .abort-build input { color: #ac4142; }
+#build-title .abort-build input:hover { background: #ac4142; }
+#build-log .error { color: #ac4142; }
 
-/* bright red */
-svg .edgePath.errored path { stroke: #e1bc8e; }
-svg #arrowhead-errored path { fill: #e1bc8e; }
-svg .node.job.errored rect { fill: #e1bc8e; }
-#build-title.errored { background: #e1bc8e; }
-li.errored { background: #e1bc8e; }
-svg .node.resource.failing rect { fill: #e1bc8e; }
+/* like, really bad */
+svg .edgePath.errored path { stroke: #d28445; }
+svg #arrowhead-errored path { fill: #d28445; }
+svg .node.job.errored rect { fill: #d28445; }
+#build-title.errored { background: #d28445; }
+li.errored { background: #d28445; }
+svg .node.resource.failing rect { fill: #d28445; }
 
-/* dim red */
-svg .edgePath.aborted path { stroke: #d25f3a; }
-svg #arrowhead-aborted path { fill: #d25f3a; }
-svg .node.job.aborted rect { fill: #d25f3a; }
-#build-title.aborted { background: #d25f3a; }
-li.aborted { background: #d25f3a; }
-#build-title .abort-build input:active { background: #d25f3a; }
+/* not so bad */
+svg .edgePath.aborted path { stroke: #8f5536; }
+svg #arrowhead-aborted path { fill: #8f5536; }
+svg .node.job.aborted rect { fill: #8f5536; }
+#build-title.aborted { background: #8f5536; }
+li.aborted { background: #8f5536; }
+#build-title .abort-build input:active { background: #8f5536; }
 
 /* active */
-svg .edgePath.started path { stroke: #ebb263; }
-svg #arrowhead-started path { fill: #ebb263; }
-svg .node.job.started rect { fill: #ebb263; }
-#build-title.started { background: #ebb263; }
-li.started { background: #ebb263; }
-
+svg .edgePath.started path { stroke: #f4bf75; }
+svg #arrowhead-started path { fill: #f4bf75; }
+svg .node.job.started rect { fill: #f4bf75; }
+#build-title.started { background: #f4bf75; }
+li.started { background: #f4bf75; }
 
 /* ansi text */
-::selection { background: #555555; color: #ffffff; }
+::selection { background: #505050; color: #f5f5f5; }
 
 .ansi-bold { font-weight: bold; }
 
-.black, .ansi-black-fg { color: #453c31; }
-.black.bright, .ansi-bright-black-fg, .ansi-black-fg.ansi-bold { color: #5d4c4c; }
+.ansi-black-fg { color: #505050; }
+.ansi-red-fg { color: #ac4142; }
+.ansi-green-fg { color: #90a959; }
+.ansi-yellow-fg { color: #f4bf75; }
+.ansi-blue-fg { color: #6a9fb5; }
+.ansi-magenta-fg { color: #aa759f; }
+.ansi-cyan-fg { color: #75b5aa; }
+.ansi-white-fg { color: #f5f5f5; }
 
-.red, .ansi-red-fg { color: #d36764; }
-.red.bright, .ansi-bright-red-fg, .ansi-red-fg.ansi-bold { color: #d25f3a; }
+.ansi-bright-black-fg { color: #505050; font-weight: bold; }
+.ansi-bright-red-fg { color: #ac4142; font-weight: bold; }
+.ansi-bright-green-fg { color: #90a959; font-weight: bold; }
+.ansi-bright-yellow-fg { color: #f4bf75; font-weight: bold; }
+.ansi-bright-blue-fg { color: #6a9fb5; font-weight: bold; }
+.ansi-bright-magenta-fg { color: #aa759f; font-weight: bold; }
+.ansi-bright-cyan-fg { color: #75b5aa; font-weight: bold; }
+.ansi-bright-white-fg { color: #f5f5f5; font-weight: bold; }
 
-.green, .ansi-green-fg { color: #8cb287; }
-.green.bright, .ansi-bright-green-fg, .ansi-green-fg.ansi-bold { color: #8eac27; }
+.ansi-black-bg { background-color: #505050; }
+.ansi-red-bg { background-color: #ac4142; }
+.ansi-green-bg { background-color: #90a959; }
+.ansi-yellow-bg { background-color: #f4bf75; }
+.ansi-blue-bg { background-color: #6a9fb5; }
+.ansi-magenta-bg { background-color: #aa759f; }
+.ansi-cyan-bg { background-color: #75b5aa; }
+.ansi-white-bg { background-color: #f5f5f5; }
 
-.yellow, .ansi-yellow-fg { color: #ebb263; }
-.yellow.bright, .ansi-bright-yellow-fg, .ansi-yellow-fg.ansi-bold { color: #ffad65; }
-
-.blue, .ansi-blue-fg { color: #6a9eef; }
-.blue.bright, .ansi-bright-blue-fg, .ansi-blue-fg.ansi-bold { color: #8cd2ed; }
-
-.magenta, .ansi-magenta-fg { color: #e1bc8e; }
-.magenta.bright, .ansi-bright-magenta-fg, .ansi-magenta-fg.ansi-bold { color: #a16d00; }
-
-.cyan, .ansi-cyan-fg { color: #b5c9e1; }
-.cyan.bright, .ansi-bright-cyan-fg, .ansi-cyan-fg.ansi-bold { color: #b5c9e1; }
-
-.white, .ansi-white-fg { color: #c0afa0; }
-.white.bright, .ansi-bright-white-fg, .ansi-white-fg.ansi-bold { color: #e0cfc0; }
-
-.ansi-black-bg { background-color: #453c31; }
-.ansi-bright-black-bg { background-color: #5d4c4c; }
-
-.ansi-red-bg { background-color: #d36764; }
-.ansi-bright-red-bg { background-color: #d25f3a; }
-
-.ansi-green-bg { background-color: #8cb287; }
-.ansi-bright-green-bg { background-color: #8eac27; }
-
-.ansi-yellow-bg { background-color: #ebb263; }
-.ansi-bright-yellow-bg { background-color: #ffad65; }
-
-.ansi-blue-bg { background-color: #6a9eef; }
-.ansi-bright-blue-bg { background-color: #8cd2ed; }
-
-.ansi-magenta-bg { background-color: #e1bc8e; }
-.ansi-bright-magenta-bg { background-color: #a16d00; }
-
-.ansi-cyan-bg { background-color: #b5c9e1; }
-.ansi-bright-cyan-bg { background-color: #b5c9e1; }
-
-.ansi-white-bg { background-color: #c0afa0; }
-.ansi-bright-white-bg { background-color: #e0cfc0; }
+.ansi-bright-black-bg { background-color: #505050; font-weight: bold; }
+.ansi-bright-red-bg { background-color: #ac4142; font-weight: bold; }
+.ansi-bright-green-bg { background-color: #90a959; font-weight: bold; }
+.ansi-bright-yellow-bg { background-color: #f4bf75; font-weight: bold; }
+.ansi-bright-blue-bg { background-color: #6a9fb5; font-weight: bold; }
+.ansi-bright-magenta-bg { background-color: #aa759f; font-weight: bold; }
+.ansi-bright-cyan-bg { background-color: #75b5aa; font-weight: bold; }
+.ansi-bright-white-bg { background-color: #f5f5f5; font-weight: bold; }
