--- a/server/public/main.css
+++ b/server/public/main.css
@@ -206,6 +206,10 @@ pre {
   padding: 0 10px 10px;
 }
 
+.resource-body pre {
+  margin: 10px 0 0;
+}
+
 .build-metadata {
   float: right;
   margin: 0;
