--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -1,4 +1,4 @@
-{{define "title"}}{{.Job.Name}} #{{.Build.ID}} - Concourse{{end}}
+{{define "title"}}{{.Job.Name}} #{{.Build.Name}} - Concourse{{end}}
 
 {{define "body"}}
 <div id="build-header">
@@ -9,7 +9,7 @@
 
     <a class="title" href="/">&lt;</a>
 
-    <h1>{{.Job.Name}} #{{.Build.ID}}</h1>
+    <h1>{{.Job.Name}} #{{.Build.Name}}</h1>
 
     {{if .Abortable}}
     <form class="abort-build" method="post" action="{{url "AbortBuild" .Job .Build}}">
@@ -20,9 +20,9 @@
 
   <ul id="builds">
     {{$job := .Job}}
-    {{$currentID := .Build.ID}}
+    {{$currentName := .Build.Name}}
     {{/* omitting whitespace for display-block style */}}
-    {{range .Builds}}<li class="{{.Status}}{{if eq .ID $currentID}} current{{end}}"><a href="{{url "GetBuild" $job .}}">{{.ID}}</a></li>{{end}}
+    {{range .Builds}}<li class="{{.Status}}{{if eq .Name $currentName}} current{{end}}"><a href="{{url "GetBuild" $job .}}">{{.Name}}</a></li>{{end}}
   </ul>
 </div>
 
