use browser's monospace font
this allows users to override it client-side

--- a/web/public/main.css
+++ b/web/public/main.css
@@ -1,12 +1,12 @@
 body {
-  font-family: Courier, monospace;
+  font-family: monospace;
   font-size: 12px;
   line-height: 1.4;
   margin: 0;
 }
 
 pre {
-  font-family: Courier, monospace;
+  font-family: monospace;
   word-wrap: break-word;
 }
 
