--- a/web/public/main.css
+++ b/web/public/main.css
@@ -294,7 +294,7 @@ pre {
 #version-history td {
   background: #111;
   margin: 0;
-  padding: 0 10px;
+  padding: 0 10px 10px;
   border: 10px solid #222;
   border-right: 0;
   border-bottom: 0;
